Alter order from status format

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -102,14 +102,22 @@ NEXT:\
 
 set -ga status-format[3] "\
 #[align=right]#[fg=$color_tab_inactive_text]\
- TODO[\
+#(~/.tmux/season-check/season-check.sh)\
 #[fg=$color_tab_active_text]\
-#(~/.tmux/todo-check/todo-left.sh)\
+[+#(~/.tmux/season-check/days_for_next_season.sh)d]\
+#[fg=$color_host]\
+ %-d/%b\
+#[fg=$color_spam_text]\
+[%a] \
 #[fg=$color_tab_inactive_text]\
-]:\
-#[fg=$color_session_text]\
-#(~/.tmux/todo-check/todo-check.sh)  \
-#[bg=$color_bg]"
+#(~/.tmux/weather-check/sky-check.sh)\
+#[fg=$color_spam_text]\
+#(~/.tmux/weather-check/weather-check.sh)°C \
+#[fg=$color_tab_inactive_text]\
+#(~/.tmux/moon-check/moon-check.sh) \
+#[fg=$color_host]\
+%H:%M  "
+
 
 # =====================
 # === 3ª Status Bar ===
@@ -262,23 +270,18 @@ fi;\
 #{?client_prefix,\
  #[fg=$color_spam_text bg=$color_spam_box]\
  ^B \
-#[bg=$color_bg fg=$color_tab_inactive_text],}\
-#[fg=$color_tab_inactive_text]\
- #(~/.tmux/season-check/season-check.sh)\
+#[bg=$color_bg fg=$color_tab_inactive_text],}"
+
+set -ga status-format[0] "\
+#[align=right]#[fg=$color_tab_inactive_text]\
+ TODO[\
 #[fg=$color_tab_active_text]\
-[+#(~/.tmux/season-check/days_for_next_season.sh)d]\
-#[fg=$color_host]\
- %-d/%b\
-#[fg=$color_spam_text]\
-[%a] \
+#(~/.tmux/todo-check/todo-left.sh)\
 #[fg=$color_tab_inactive_text]\
-#(~/.tmux/weather-check/sky-check.sh)\
-#[fg=$color_spam_text]\
-#(~/.tmux/weather-check/weather-check.sh)°C \
-#[fg=$color_tab_inactive_text]\
-#(~/.tmux/moon-check/moon-check.sh) \
-#[fg=$color_host]\
-%H:%M  "
+]:\
+#[fg=$color_session_text]\
+#(~/.tmux/todo-check/todo-check.sh)  \
+#[bg=$color_bg]"
 
 # =====================
 # === Pane Settings ===
